# dfreproject

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  codedev.yml  dfreproject.bib  examples.html  genindex.html  index.html  methodology.html  objects.inv  paper.md  py-modindex.html  pyproject.toml  pytest.ini  readthedocs.yaml  search.html  searchindex.js  setup.py  test.py
.github/workflows/: codeql.yml  dependency-review.yml  docs.yml  draft-pdf.yml  python-code-quality.yml  scorecard.yml  tests.yml
_modules/: index.html
_modules/dfreproject/: lanczos.html  reproject.html  sip.html  tensorhdu.html  utils.html
_sources/: examples.rst.txt  index.rst.txt  methodology.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/dfreproject/: index.rst.txt
_sources/autoapi/dfreproject/lanczos/: index.rst.txt
_sources/autoapi/dfreproject/reproject/: index.rst.txt
_sources/autoapi/dfreproject/sip/: index.rst.txt
_sources/autoapi/dfreproject/tensorhdu/: index.rst.txt
_sources/autoapi/dfreproject/utils/: index.rst.txt
_sources/examples/: reprojection-comparison.ipynb.txt
autoapi/: index.html
autoapi/dfreproject/: index.html
autoapi/dfreproject/lanczos/: index.html
autoapi/dfreproject/reproject/: index.html
autoapi/dfreproject/sip/: index.html
autoapi/dfreproject/tensorhdu/: index.html
autoapi/dfreproject/utils/: index.html
demo/: Coordinate-Comparison.ipynb  basic_reprojection-large-shift.ipynb  basic_reprojection.ipynb  basic_reprojection_large.ipynb  create_test_data.py  extreme-flux-conservation.ipynb  reproject_with_grad_demo.ipynb  reprojection-comparison-mini.ipynb  reprojection-comparison-mini2.ipynb  reprojection-comparison-speed.ipynb  reprojection-comparison.ipynb  tensor_reproject_test.ipynb  utils.py
demo/benchmarking/: benchmark-plotter.py  benchmark-script.py  reproject_benchmark_detailed_results_cpu.csv  reproject_benchmark_detailed_results_cuda.csv
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  methodology.rst  solution_methodology.rst
docs/source/examples/: Coordinate-Comparison.ipynb  basic_reprojection.ipynb  reprojection-comparison-mini.ipynb  reprojection-comparison-speed.ipynb  reprojection-comparison.ipynb
docs/source/examples/data/: test_source_tiny.fits  test_target_tiny.fits
examples/: Coordinate-Comparison.html  Coordinate-Comparison.ipynb  reprojection-comparison-mini.html  reprojection-comparison-mini.ipynb  reprojection-comparison.html  reprojection-comparison.ipynb
src/dfreproject/: __init__.py  lanczos.py  reproject.py  sip.py  tensorhdu.py  utils.py
src/reprojection/: reproject.py  sip.py  utils.py
tests/: conftest.py  fixtures_and_helpers.py  test_calculate_reprojection.py  test_chunking.py  test_coordinate_transformations.py  test_device.py  test_interpolation.py  test_lanczos.py  test_sip_functions.py  test_sip_variables.py  test_tensorhdu_and_grad.py
